RESOLVED FIXED279355
BlobLoader should not pass itself to its completion handler when cancelled
https://bugs.webkit.org/show_bug.cgi?id=279355
Summary BlobLoader should not pass itself to its completion handler when cancelled
youenn fablet
Reported 2024-09-09 04:05:02 PDT
BlobLoader should not pass itself to its completion handler when cancelled
Attachments
youenn fablet
Comment 1 2024-09-09 04:05:13 PDT
youenn fablet
Comment 2 2024-09-10 08:46:25 PDT
EWS
Comment 3 2024-09-17 00:18:32 PDT
Committed 283752@main (288e0b49de4f): <https://commits.webkit.org/283752@main> Reviewed commits have been landed. Closing PR #33320 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.