BlobLoader should not pass itself to its completion handler when cancelled rdar://135720087 https://bugs.webkit.org/show_bug.cgi?id=279355

Reviewed by Alex Christensen.

https://commits.webkit.org/228429@main made BlobLoader call its completion handler in the cancel case.
This is notably triggered when BlobLoader is destroyed while still loading.
FormDataConsumer lambda would then be called within its destructor.

We recently introduced ref counting of FormDataConsumer which triggered refing of FormDataConsumer within its destructor, which triggers an assert.
We fix this by having BlobLoader NOT call its completion callback in the cancel case.

Covered by existing tests.

* Source/WebCore/fileapi/Blob.cpp:
(WebCore::Blob::loadBlob):
* Source/WebCore/fileapi/Blob.h:
* Source/WebCore/fileapi/BlobLoader.h:
(WebCore::BlobLoader::BlobLoader):
(WebCore::BlobLoader::cancel):
(WebCore::BlobLoader::didFinishLoading):
(WebCore::BlobLoader::didFail):
* Source/WebCore/fileapi/NetworkSendQueue.cpp:
(WebCore::NetworkSendQueue::clear):
* Source/WebCore/page/ShareDataReader.cpp:
(WebCore::ShareDataReader::cancel):

Canonical link: https://commits.webkit.org/283752@main